// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`worker should emit error: error 1`] = `
[
  "str.replace is not a function",
]
`;

exports[`worker should minify html #2: html 1`] = `
{
  "errors": [],
  "outputs": [
    {
      "code": "<!-- Comment --><p title="blah" id="moo"> foo </p>",
    },
  ],
  "warnings": [],
}
`;

exports[`worker should minify html #3: html 1`] = `
{
  "errors": [],
  "outputs": [
    {
      "code": "<!-- From minify function --><p class="atata">from-minify-function</p>",
    },
  ],
  "warnings": [],
}
`;

exports[`worker should minify html #4: html 1`] = `
{
  "errors": [],
  "outputs": [
    {
      "code": "<!-- From minify function 2 --><p class="atata">from-minify-function</p>",
    },
  ],
  "warnings": [],
}
`;

exports[`worker should minify html #5: html 1`] = `
{
  "errors": [],
  "outputs": [
    {
      "code": "<!-- From minify function with "{ removeComments: true }" --><p class="atata">from-minify-function</p>",
    },
  ],
  "warnings": [],
}
`;

exports[`worker should minify html: html 1`] = `
{
  "errors": [],
  "outputs": [
    {
      "code": "<!-- Comment --><p title="blah" id="moo"> foo </p>",
    },
  ],
  "warnings": [],
}
`;
